--- a/frontend/cadastro-anuncio.html
+++ b/frontend/cadastro-anuncio.html
@@ -77,7 +77,7 @@
                 </div>
             </div>
         </section>
-        <section class="container-fluid form-cadastro">
+        <section id="form-cadastro" class="container-fluid form-cadastro">
             <form class="d-flex">
                 <div class="container-fluid">
                     <input id="inputId" type="hidden">
@@ -87,12 +87,12 @@
                     </div>
                     <div class="form-group">
                         <label for="inputContato">Contato</label>
-                        <input required type="tel" placeholder="(99) 99999-9999" class="form-control" id="inputContato">
+                        <input required type="tel" placeholder="(99) 99999-9999" class="form-control" id="inputContato" pattern="\(\d{2}\) \d{5}-\d{4}" title="Formato: (99) 99999-9999">
                     </div>
                     <div class="form-group">
                         <label for="selectRaca">Raça</label>
                         <select required id="selectRaca" class="form-select">
-                            <option selected></option>
+                            <option value="" selected></option>
                             <option value="VIRA_LATA">Vira-lata</option>
                             <option value="LABRADOR">Labrador</option>
                             <option value="BULDOGUE_FRANCÊS">Buldogue Francês</option>
@@ -129,19 +129,19 @@
                     <div class="container-select-cadastro">
                         <label class="form-check-label labelCaracteristicas">Características</label>
                         <div class=" d-flex justify-content-between">
-                            <select id="selectPorte" class="form-select" aria-label="Default select example">
-                                <option selected>Porte</option>
+                            <select required id="selectPorte" class="form-select" aria-label="Default select example">
+                                <option value="" selected>Porte</option>
                                 <option value="P">P</option>
                                 <option value="M">M</option>
                                 <option value="G">G</option>
                             </select>
-                            <select id="selectTipo" class="form-select" aria-label="Default select example">
-                                <option selected>Tipo</option>
+                            <select required id="selectTipo" class="form-select" aria-label="Default select example">
+                                <option value="" selected>Tipo</option>
                                 <option value="GATO">Gato</option>
                                 <option value="CACHORRO">Cachorro</option>
                             </select>
-                            <select id="selectSexo" class="form-select" aria-label="Default select example">
-                                <option selected>Sexo</option>
+                            <select required id="selectSexo" class="form-select" aria-label="Default select example">
+                                <option value="" selected>Sexo</option>
                                 <option value="M">Macho</option>
                                 <option value="F">Fêmea</option>
                             </select>
