--- a/frontend/admin/recursos.html
+++ b/frontend/admin/recursos.html
@@ -69,6 +69,7 @@
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
     <script type="module" src="js/recursos.js"></script>
+    <script type="module" src="js/logout.js"></script>
 </body>
 
 </html>
