--- a/frontend/index.html
+++ b/frontend/index.html
@@ -102,6 +102,7 @@
     crossorigin="anonymous"></script>
   <script type="module" src="js/index.js"></script>
   <script type="module" src="js/Jwt.js"></script>
+  <script type="module" src="js/logout.js"></script>
 </body>
 
 </html>
