--- a/frontend/admin/ativos.html
+++ b/frontend/admin/ativos.html
@@ -106,6 +106,7 @@
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
     <script type="module" src="js/ativos.js"></script>
+    <script type="module" src="js/logout.js"></script>
 </body>
 
 </html>
