--- a/frontend/admin/denuncias.html
+++ b/frontend/admin/denuncias.html
@@ -71,6 +71,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
     <script type="module" src="js/denuncias.js"></script>
+    <script type="module" src="js/logout.js"></script>
 </body>
 
 </html>
