--- a/frontend/anuncios.html
+++ b/frontend/anuncios.html
@@ -47,7 +47,7 @@
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
     <script type="module" src="js/anuncios.js"></script>
-
+    <script type="module" src="js/logout.js"></script>
 </body>
 
 </html>
