--- a/frontend/cadastro-anuncio.html
+++ b/frontend/cadastro-anuncio.html
@@ -30,52 +30,6 @@
             <div class="div-btn-novo-anuncio">
                 <button class="btn-novo-anuncio">Novo anúncio</button>
             </div>
-            <div class="container-fluid d-flex animal-card">
-                <div class="d-flex container-foto">
-                    <img class="foto"
-                        src="https://img.freepik.com/fotos-premium/ia-generativa-de-cachorro-estilo-pixar-bebe-super-fofo_431161-2025.jpg"
-                        alt="">
-                </div>
-                <div class="d-flex flex-column justify-content-center infos">
-                    <div class="d-flex justify-content-center align-items-center">
-                        <h1>Tobi</h1>
-                    </div>
-                    <p>Raça: Vira-lata</p>
-                    <p>Porte: M</p>
-                    <p>Macho</p>
-                </div>
-                <i class="fa-solid fa-circle-exclamation danger"></i>
-            </div>
-            <div class="container-fluid d-flex animal-card cadastro-active">
-                <div class="d-flex container-foto">
-                    <img class="foto"
-                        src="https://img.freepik.com/fotos-premium/ia-generativa-de-cachorro-estilo-pixar-bebe-super-fofo_431161-2025.jpg"
-                        alt="">
-                </div>
-                <div class="d-flex flex-column justify-content-center infos">
-                    <div class="d-flex justify-content-center align-items-center">
-                        <h1>Tobi</h1>
-                    </div>
-                    <p>Raça: Vira-lata</p>
-                    <p>Porte: M</p>
-                    <p>Macho</p>
-                </div>
-            </div>
-            <div class="container-fluid d-flex animal-card">
-                <div class="d-flex container-foto">
-                    <img class="foto"
-                        src="https://img.freepik.com/fotos-premium/ia-generativa-de-cachorro-estilo-pixar-bebe-super-fofo_431161-2025.jpg"
-                        alt="">
-                </div>
-                <div class="d-flex flex-column justify-content-center infos">
-                    <div class="d-flex justify-content-center align-items-center">
-                        <h1>Tobi</h1>
-                    </div>
-                    <p>Raça: Vira-lata</p>
-                    <p>Porte: M</p>
-                    <p>Macho</p>
-                </div>
-            </div>
         </section>
         <section id="form-cadastro" class="container-fluid form-cadastro">
             <form class="d-flex">
@@ -87,7 +41,8 @@
                     </div>
                     <div class="form-group">
                         <label for="inputContato">Contato</label>
-                        <input required type="tel" placeholder="(99) 99999-9999" class="form-control" id="inputContato" pattern="\(\d{2}\) \d{5}-\d{4}" title="Formato: (99) 99999-9999">
+                        <input required type="tel" placeholder="(99) 99999-9999" class="form-control" id="inputContato"
+                            pattern="\(\d{2}\) \d{5}-\d{4}" title="Formato: (99) 99999-9999">
                     </div>
                     <div class="form-group">
                         <label for="selectRaca">Raça</label>
@@ -161,13 +116,14 @@
                         <button id="btn-salvar" class="btn-cadastro">Salvar</button>
                     </div>
                 </div>
-            </form>
+            </form>         
         </section>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
             integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
             crossorigin="anonymous"></script>
         <script type="module" src="js/user.js"></script>
         <script type="module" src="js/cadastro-anuncio.js"></script>
+        <script type="module" src="js/utils.js"></script>
 </body>
 
 </html>
