Alerts in every screen

--- a/frontend/admin/recursos.html
+++ b/frontend/admin/recursos.html
@@ -70,6 +70,7 @@
         crossorigin="anonymous"></script>
     <script type="module" src="js/recursos.js"></script>
     <script type="module" src="js/logout.js"></script>
+    <script type="module" src="../js/Utils.js"></script>
 </body>
 
 </html>
