--- a/frontend/admin/denunciados.html
+++ b/frontend/admin/denunciados.html
@@ -68,6 +68,7 @@
         crossorigin="anonymous"></script>
     <script type="module" src="js/denunciados.js"></script>
     <script type="module" src="js/logout.js"></script>
+    <script type="module" src="../js/Utils.js"></script>
 </body>
 
 </html>
