--- a/frontend/admin/denuncias.html
+++ b/frontend/admin/denuncias.html
@@ -72,6 +72,7 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
     <script type="module" src="js/denuncias.js"></script>
     <script type="module" src="js/logout.js"></script>
+    <script type="module" src="../js/Utils.js"></script>
 </body>
 
 </html>
