--- a/frontend/index.html
+++ b/frontend/index.html
@@ -91,7 +91,7 @@
           </div>
           <div class="modal-footer">
             <button id="btnClose" type="button" class="btn btn-secondary" data-bs-dismiss="modal">Fechar</button>
-            <button id="btnSave" type="button" class="btn btn-primary">Salvar</button>
+            <button id="btnSave" type="button" class="btn btn-primary">Enviar</button>
           </div>
         </div>
       </div>
