--- a/frontend/esqueci-minha-senha.html
+++ b/frontend/esqueci-minha-senha.html
@@ -5,10 +5,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Esqueci minha senha</title>
-    <link
-        href="https://fonts.googleapis.com/css2?family=Inter:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
-        rel="stylesheet">
+    <link href='https://fonts.googleapis.com/css?family=Fredoka One' rel='stylesheet'>
+    <link href='https://fonts.googleapis.com/css?family=Inter' rel='stylesheet'>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
     <link rel="icon" href="./favicon.png">
     <style>
         * {
@@ -21,12 +21,21 @@
             padding: 0;
             height: 100vh;
             width: 100vw;
+        }
+
+        .wrapper {
             display: flex;
+            flex-direction: column;
             justify-content: center;
             align-items: center;
+            height: calc(100vh - 68px);
         }
 
         .reset-container {
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
             background-color: #ffffff;
             border-radius: 8px;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
@@ -56,7 +65,7 @@
             border-color: #e88c1f;
         }
 
-        .btn-primary:focus{
+        .btn-primary:focus {
             background-color: #FF9B23;
             border-color: #FF9B23;
             box-shadow: 0 0 0 .2rem rgba(0, 0, 0, 0);
@@ -65,20 +74,63 @@
         .alert-container {
             margin-top: 20px;
         }
+
+        .header {
+            color: #FFFFFF;
+            padding: 10px 30px;
+        }
+
+        .background-color-primary {
+            background-color: #FF9B23;
+        }
+
+        .header h1 {
+            user-select: none;
+            font-size: 2rem;
+            margin: 0;
+            font-family: 'Fredoka One';
+        }
+
+        .header-icon {
+            font-size: 2rem;
+            margin-right: 8px;
+        }
+
+        a {
+            color: inherit;
+            text-decoration: none;
+        }
+
+        a:hover {
+            color: inherit;
+            text-decoration: none;
+        }
     </style>
 </head>
 
 <body>
-    <div class="reset-container">
-        <h2>Recuperar senha</h2>
-        <div id="alertContainer" class="alert-container"></div>
-        <form id="resetForm">
-            <div class="form-group">
-                <input type="email" class="form-control" id="email" placeholder="Digite seu email" required>
-            </div>
-            <button id="btnEnviarEmail" type="submit" class="btn btn-primary btn-block">Enviar e-mail de
-                recuperação</button>
-        </form>
+    <header>
+        <div class="container-fluid d-flex justify-content-between align-items-center background-color-primary header">
+            <a href="/login.html">
+                <div id="home" class="d-flex align-items-center pointer" title="Home">
+                    <i class="fa-solid fa-shield-dog header-icon"></i>
+                    <h1>MarPetplace</h1>
+                </div>
+            </a>
+        </div>
+    </header>
+    <div class="wrapper">
+        <div class="reset-container">
+            <h2>Recuperar senha</h2>
+            <div id="alertContainer" class="alert-container"></div>
+            <form id="resetForm">
+                <div class="form-group">
+                    <input type="email" class="form-control" id="email" placeholder="Digite seu email" required>
+                </div>
+                <button id="btnEnviarEmail" type="submit" class="btn btn-primary btn-block">Enviar e-mail de
+                    recuperação</button>
+            </form>
+        </div>
     </div>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js"></script>
