--- a/frontend/login.html
+++ b/frontend/login.html
@@ -41,7 +41,7 @@
                         <div class="text"><a href="esqueci-minha-senha.html">Esqueci minha senha</a></div>
                     </div>
                     <div class="row">
-                        <div class="text">Ainda não é cadastrado? <a href="#">Cadastre-se aqui!</a></div>
+                        <div class="text">Ainda não é cadastrado? <a href="cadastro-usuario.html">Cadastre-se aqui!</a></div>
                     </div>
                 </div>
             </div>
